@@ -1,6 +1,6 @@
 #!/bin/sh
 # heating.sh
-# Time-stamp: <2011-02-01 18:29:02 takeshi>
+# Time-stamp: <2011-08-20 22:49:14 takeshi>
 # Author: Takeshi NISHIMATSU
 ##
 rm -f heating.avg
@@ -65,7 +65,7 @@ EOF
     if [ -r "$prev_coord" ]; then
         ln -sf "$prev_coord" $filename.restart
     fi
-    ../../feram $filename > /dev/null
+    ../../feram $filename
     prev_coord=$filename.`printf '%.10d' $n_coord_freq`.coord
     cat $filename.avg >> heating.avg
     temperature=`perl -e "print $temperature + $temperature_step"`
