@@ -7,6 +7,8 @@
  * feram does not read from stdin anymore.
 
  * Log goes to foo.log, not to stdout anymore.
+   Use --disable-detailed-messages for configure                  !!!!!IMPORTANT!!!!!
+   to suppress this huge output.
 
 == 0.14.06 (private release)
  * New tag seed, two integers for Marsaglia-Tsang 64-bit uiniversal RNG (random number generator).
